--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,8 @@ build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
 module = "furo"
-author = "Pradyun Gedam"
-author-email = "mail@pradyunsg.me"
-home-page = "https://github.com/pradyunsg/furo"
+author = "Isaac Gonzalez"
+home-page = "https://github.com/isaacyadir"
 description-file = "README.md"
 requires-python = ">=3.6"
 requires = [
