--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+  
 scipy
 numpy
 matplotlib
@@ -17,3 +18,6 @@ sphinxext-opengraph
 pydata-sphinx-theme
 MyST-Parser
 sphinxext-rediraffe
+sphinx_book_theme
+sphinx_copybutton
+sphinx_thebe
